--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     * { padding: 0; margin: 0;}
     canvas { background: #eee; display: block; margin: 0 auto; }
   </style>
+  <audio id="shot" src="shot.wav"></audio>
 </head>
 <body>
 
@@ -23,16 +24,31 @@
   var paddleHeight = 10;
   var paddleWidth = 75;
   var paddleX = (canvas.width-paddleWidth)/2;
-
   var gameOver = false;
+
+// bricks settings
+  var brickRowCount = 3;
+  var brickColumnCount = 5;
+  var brickWidth = 75;
+  var brickHeight = 20;
+  var brickPadding = 10;
+  var brickOffsetTop = 30;
+  var brickOffsetLeft = 30;
 
   // move
   var rightPressed = false;
   var leftPressed = false;
 
+  var bricks = [];
+  for(c = 0; c < brickColumnCount; c++) {
+    bricks[c] = [];
+    for(r = 0; r < brickRowCount; r++) {
+      bricks[c][r] = { x: 0, y: 0, status: 1 };
+    }
+  }
+
   document.addEventListener("keydown", keyDownHandler, false);
   document.addEventListener("keyup", keyUpHandler, false);
-
 
   function keyDownHandler(e) {
     if(e.keyCode == 39) {
@@ -52,6 +68,20 @@
     }
   }
 
+  function collisionDetection() {
+    for(c=0; c<brickColumnCount; c++) {
+      for(r=0; r<brickRowCount; r++) {
+        var b = bricks[c][r];
+        if(b.status == 1) {
+          if(x > b.x && x < b.x+brickWidth && y > b.y && y < b.y+brickHeight) {
+              dy = -dy;
+              b.status = 0;
+          }
+        }
+      }
+    }
+  }
+
   function drawBall() {
     ctx.beginPath();
     ctx.arc(x, y, ballRadius, 0, Math.PI*2);
@@ -68,12 +98,33 @@
     ctx.closePath();
   }
 
+  function drawBricks() {
+    for(c=0; c<brickColumnCount; c++) {
+      for(r=0; r<brickRowCount; r++) {
+        if(bricks[c][r].status == 1) {
+          var brickX = (c*(brickWidth+brickPadding))+brickOffsetLeft;
+          var brickY = (r*(brickHeight+brickPadding))+brickOffsetTop;
+          bricks[c][r].x = brickX;
+          bricks[c][r].y = brickY;
+          ctx.beginPath();
+          ctx.rect(brickX, brickY, brickWidth, brickHeight);
+          ctx.fillStyle = "#0095DD";
+          ctx.fill();
+          ctx.closePath();
+      }
+      }
+    }
+  }
+
   function draw() {
     if (!gameOver) {
 
       ctx.clearRect(0,0, canvas.width, canvas.height)
+      drawBricks();
       drawBall();
       drawPaddle();
+      drawBricks();
+      collisionDetection();
 
       if(x + dx > canvas.width-ballRadius || x + dx < ballRadius) {
         dx = -dx;
