--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
   <title>Gamedev Canvas</title>
   <style>
     * { padding: 0; margin: 0;}
-    canvas { background: #eee; display: block; margin: 0 auto; }
+    canvas { background: #F3FFBD; display: block; margin: 0 auto; }
   </style>
-  <audio id="shot" src="shot.wav"></audio>
 </head>
 <body>
-
+<audio id="collision" src="explosion.wav"></audio>
+<audio id="jump" src="jump.wav"></audio>
 <canvas id="myCanvas" width="480" height="320"></canvas>
-
 <script>
   var canvas = document.getElementById("myCanvas");
   var ctx = canvas.getContext("2d");
@@ -38,6 +37,9 @@
   // move
   var rightPressed = false;
   var leftPressed = false;
+
+  // score 
+  var score = 0;
 
   var bricks = [];
   for(c = 0; c < brickColumnCount; c++) {
@@ -74,18 +76,30 @@
         var b = bricks[c][r];
         if(b.status == 1) {
           if(x > b.x && x < b.x+brickWidth && y > b.y && y < b.y+brickHeight) {
-              dy = -dy;
-              b.status = 0;
+            dy = -dy;
+            b.status = 0;
+            score++;
+            document.getElementById('collision').play();
+            if(score == brickRowCount*brickColumnCount) {
+                        alert("YOU WIN, CONGRATULATIONS!");
+                        document.location.reload();
+                    }
           }
         }
       }
     }
   }
 
+  function drawScore() {
+    ctx.font = "16px Arial";
+    ctx.fillStyle = "#0095DD";
+    ctx.fillText("Score: "+score, 8, 20);
+  }
+
   function drawBall() {
     ctx.beginPath();
     ctx.arc(x, y, ballRadius, 0, Math.PI*2);
-    ctx.fillStyle = "#0095DD";
+    ctx.fillStyle = "#70C1B3";
     ctx.fill();
     ctx.closePath();
   }
@@ -93,7 +107,7 @@
   function drawPaddle() {
     ctx.beginPath();
     ctx.rect(paddleX, canvas.height-paddleHeight, paddleWidth, paddleHeight);
-    ctx.fillStyle = "#0095DD";
+    ctx.fillStyle = "#FF1654";
     ctx.fill();
     ctx.closePath();
   }
@@ -108,7 +122,7 @@
           bricks[c][r].y = brickY;
           ctx.beginPath();
           ctx.rect(brickX, brickY, brickWidth, brickHeight);
-          ctx.fillStyle = "#0095DD";
+          ctx.fillStyle = "#70C1B3";
           ctx.fill();
           ctx.closePath();
       }
@@ -125,6 +139,7 @@
       drawPaddle();
       drawBricks();
       collisionDetection();
+      drawScore();
 
       if(x + dx > canvas.width-ballRadius || x + dx < ballRadius) {
         dx = -dx;
@@ -134,6 +149,7 @@
       } else if (y + dy > canvas.height-ballRadius) {
           if(x > paddleX && x < paddleX + paddleWidth) {
             dy = -dy;
+            document.getElementById('jump').play();
           } else {
             gameOver = true;
             alert("GAME OVER");
